updated web example, logging